--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,6 +6,7 @@
         <div>
             <h1>Django Girls Blog</h1>
         </div>
+        {{ posts }}
         {% for post in posts %}
             <div>
                 <p>published: {{ post.published_date }}</p>
